# kin

./: Cargo.toml  cousins.dot  grandchild_rp.dot  half_sib.dot  half_siblings.dot  incest.dot  nn_au.dot  out.dot  readme.md
kingraph-web/: package-lock.json  package.json
kingraph-web/.solid/inspect/: route-manifest.json  ssr-manifest.json
kingraph-web/.solid/server/: entry-server.js  manifest.json
kingraph-web/src/: kin.ts  render_kingraph.ts  root.tsx
kingraph-web/src/components/: pixi_kingraph.tsx
kingraph-web/src/routes/: about.tsx
src/: kin_dsl.rs  kin_wasm.rs  lib.rs  states.rs  test_kin.rs
