[package]
name = "kin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "*"
uuid = { version = "1.0.0", features = ["serde", "v4", "v1"] }
anyhow = { version = "*" }
thiserror = "*"
dot = "*"
indexmap = "*"
itertools= "*"