[package]
name = "kin"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "*"
uuid = { version = "1.0.0", features = ["serde", "v4", "v1"] }
anyhow = { version = "*" }
thiserror = "*"
dot = "*"
indexmap = "*"
itertools = "*"
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
